# CobaldParser

./: .gitignore  README.md  confing.json  main.py  model_config.json  pipeline.py  predict.sh  predict_pretokenized.py  pyproject.toml  requirements.txt  train.args  train.py
.github/workflows/: test.yml
cobald_parser/: __init__.py  configuration.py  dependency_classifier.py  encoder.py  mlp_classifier.py  modeling_parser.py  pipeline.py  utils.py
common/: parse_conllu.py  sentence.py  token.py
configs/: distilbert.jsonnet  xlm-roberta-base.jsonnet
data/: .gitattributes  download_target_dataset.sh  en_pretrain.conllu  filter_invalid_conllu.py  postprocessing.py  preprocessing.py  tag_eraser.py  train_val_split.py
evaluate/: deps_rels_confusion.ipynb  differ.py  evaluate.py
evaluate/scorer/: lca.py  scorer.py  taxonomy.py
src/: __init__.py  activations.py  backbone.py  bilinear_matrix_attention.py  callbacks.py  chu_liu_edmonds.py  dataset.py  decoder.py  dependency_classifier.py  encoder.py  feedforward_classifier.py  lemma_classifier.py  lemmatize_helper.py  main.py  metrics.py  mlp.py  mlp_classifier.py  multilabel_adjacency_field.py  null_classifier.py  null_predictor.py  parser.py  predict.py  processing.py  read_conllu.py  tagger.py  train.py  trainer.py  utils.py  vocabulary.py
src/old/: dataset_hf.py  hf_pipeline.ipynb  lemma_classifier.py  predictor.py  torch_pipeline.ipynb
tests/: test_dependency_classifier.py  test_metrics.py  test_pipeline.py  test_utils.py
